--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -10,7 +10,7 @@
 </div>
 
 <table class="table table-hover">
-  <% @users.each do |user|%>
+  <% @users.preload(:genres).each do |user|%>
     <tr>
       <td class="col-xs-1">
         <%= attachment_image_tag(user, :user_image, :fill, 50, 50, fallback: "no_image.jpg", size: "50x50") %>
@@ -41,7 +41,7 @@
               <% end %>
             </span>
             <% limit = 3 %>
-            <% user.genres. each do |genre| %>
+            <% user.genres.each do |genre| %>
               <% break if limit == 0 %>
               <% limit -= 1 %>
               <span class="genre_icon"><%= genre.genre_name %></span>
